# GTG_Qt

./: .gitignore  C++ Game  C++ Game.cpp  GOALS.md  Game  Goals.MD  INSTALL  INSTALL.unix  README.md  TODO  compile.sh  game.cpp  giterdun  helpers.sh  pseudo_map_hierarchy.txt  randomnpclines.txt  run.sh  script.txt
Artwork/Sprites/bed/: bed layout.txt
Binaries/: Linux  OSX binaries.cpp
Binaries/Windows/res/: tiles.txt
Code/: pseudo_map_hierarchy.txt
Code/GTG/: GTG.cpp  GTG.h  GTGMap.cpp  GTGMap.h  GTGPlayer.cpp  GTGPlayer.h  GTGProjectile.cpp  GTGProjectile.h  GTGTile.cpp  GTGTile.h  Makefile  SDLHelper.cpp  SDLHelper.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives_font.h  main.cpp
Code/GTGEditor/: GTGMap.cpp  GTGMap.h  GTGPlayer.cpp  GTGPlayer.h  GTGTile.cpp  GTGTile.h  Makefile  SDLGui.cpp  SDLGui.h  SDLGuiStyle.cpp  SDLHelper.cpp  SDLHelper.h  SDL_gfxPrimitives.h  main.cpp
Code/GameScene/: .clang_complete  CMakeLists.txt  ChildList.h  Map.cpp  Map.h  MenuHandler.cpp  MenuHandler.h  NamedObject.cpp  Player.cpp  Player.h  QmlListAdapter.h  Row.cpp  Row.h  TextureCache.cpp  TextureCache.h  Tile.cpp  Tile.h  TileBehavior.cpp  TileBehavior.h  TileDef.h  TileType.cpp  TileType.h  TileView.cpp  TileView.h  ViewList.cpp  ViewList.h  ViewListEntry.cpp  ViewListEntry.h  main.cpp  maploader
Code/GameScene/MapLoader/: CMakeLists.txt  ChildList.h  Makefile  Map.cpp  Map.h  MenuHandler.cpp  MenuHandler.h  NamedObject.cpp  NamedObject.h  Player.cpp  Player.h  QmlListAdapter.h  Row.cpp  Row.h  TextureCache.cpp  TextureCache.h  Tile.cpp  Tile.h  TileBehavior.cpp  TileBehavior.h  TileDef.h  TileType.cpp  TileType.h  TileView.cpp  TileView.h  ViewList.cpp  ViewList.h  ViewListEntry.cpp  ViewListEntry.h  main.cpp
Code/GameScene/MapLoader/maps/: demo.qml
Code/GameScene/MapLoader/tiles/: concrete.qml  grass_tall.qml  sand.qml  water.qml
Code/GameScene/TileLoader/: ListFunctions.h  Makefile  Map.cpp  Map.h  Player.cpp  Player.h  Row.cpp  Row.h  Tile.cpp  Tile.h  main.cpp
Code/GameScene/TileLoader/maps/: demo.qml
Code/GameScene/TileLoader/tiles/: concrete.qml  grass_tall.qml  sand.qml  water.qml
Code/GameScene/maps/: demo.qml
Code/GameScene/menu/: Gentoo.qml
Code/GameScene/src/: CMakeLists.txt  Map.cpp  Map.h  MenuHandler.cpp  MenuHandler.h  Player.cpp  Row.cpp  Row.h  TextureCache.cpp  TextureCache.h  Tile.cpp  Tile.h  main.cpp
Code/GameScene/src/helpers/: ChildList.h  NamedObject.cpp  NamedObject.h  QmlListAdapter.h  Registered.h
Code/GameScene/src/tile/: Behavior.cpp  Behavior.h  Class.cpp  Class.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Texture.cpp  Texture.h
Code/GameScene/tiles/: grass_tall.qml  water.qml
Code/Menu/old/: mainwindow.cpp  mainwindow.ui
Code/Qt/maps/: demo.qml
Code/Qt/src/: CMakeLists.txt  FloatingEntity.h  Player.h  TextureCache.cpp  TextureCache.h  Tile.cpp  Tile.h  main.cpp
Code/Qt/src/floating/: Entity.cpp
Code/Qt/src/gfx/: LayerStack.cpp  Texture.cpp  TextureCache.cpp
Code/Qt/src/graphics/: Layer.cpp  Layer.h  LayerStack.h  Texture.cpp  Texture.h
Code/Qt/src/helpers/: QmlListAdapter.h  Registered.h  Registry.cpp
Code/Qt/src/map/: Behavior.cpp  Behavior.h  Class.cpp  Class.h  Map.cpp  Map.h  Row.cpp  Row.h  (+2 more)
Code/Qt/tiles/: concrete.qml  grass_tall.qml  sand.qml  water.qml
Code/QtEditor/: MainWindow.cpp  MainWindow.h  Makefile  MapDisplay.cpp  MapDisplay.h  Tile.cpp  Tile.h  TileButton.cpp  TileButton.h  TileChooser.cpp  TileChooser.h  TopPanel.cpp  TopPanel.h  config.h  editor.pro  main.cpp  tiles
Code/SDL/: GTGMap.cpp  GTGProjectile.cpp  GTGProjectile.h  GTGTile.cpp  SDLHelper.cpp
Code/SDLEditor/: Makefile  SDL_gfxPrimitives.h  SDL_gfxPrimitives_font.h
Code/Testing/Evaluating QScript/: Makefile  main.cpp
Game/: Style.txt
Game/GTG/: GTG.cpp  GTG.h  Makefile  SDL_gfxPrimitives.h
Game/GTG Menu/qml/: Gentoo.qml  MenuItem.qml  main_menu.qml
Game/GTGEditor/: Makefile  SDLGui.cpp  SDLHelper.cpp  SDL_gfxPrimitives.c  main.cpp
Game/GameScene/: GTGMap.cpp  GTGMap.h  GTGPlayer.cpp  GTGPlayer.h  GTGTile.cpp  GTGTile.h  Makefile  SDLHelper.cpp  SDLHelper.h  main.cpp
Game/GameScene/SDL_gfx/: Makefile
Game/GameScene/map/: map.txt  player.txt  tiles.txt
Game/Menu/Copy pasted txt files/: new_Menu.pro
Game/Menu/new_Menu-build-Desktop_Qt_5_0_1_MinGW_32bit-Debug/: Makefile.Debug  Makefile.Release
Game/Menu/old/: resources.qrc
Game/Menu/qml/: MenuItem.qml  main_menu.qml
Info/: Team.txt
Info/Code/: Style.txt
Info/Code/qml/: MenuItem.qml  main_menu.qml
Info/Story/: Background.txt  Characters.txt  Factions.txt  Story.txt
Scripts/: randomnpclines.txt  script.txt
backup/Artwork/Sprites/: spritestyle.txt
backup/Binaries/res/: map.txt
backup/Code/SDL/: GTG.h  GTGPlayer.h  GTGProjectile.cpp  SDLHelper.h
backup/Code/SDLEditor/: GTGPlayer.cpp  GTGPlayer.h  GTGTile.cpp  SDLGui.cpp  SDLGuiStyle.cpp  SDLHelper.h
backup/Code/Testing/Qt Hello World/: CMakeLists.txt  main.cpp
backup/Scripts/: script_characters.txt
binaries/: Linux
editor/: MainWindow.cpp  MainWindow.h  MapDisplay.cpp  MapDisplay.h  Tile.cpp  Tile.h  TileButton.cpp  TileButton.h  TileChooser.cpp  TileChooser.h  TopPanel.cpp  TopPanel.h  assets  compile.sh  config.h  editor.pro  run.sh  tiles
game/: Doxyfile  compile.sh  game.pro  gtg  run.sh
game/assets/maps/: demo.qml
game/menu/: main_menu.qml
game/src/: .clang_complete  CMakeLists.txt  MenuHandler.cpp  MenuHandler.h  QMakeProject.pro  build.pri  main.cpp
game/src/floating/: Entity.cpp  Entity.h  Player.cpp  Player.h
game/src/gfx/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Texture.cpp  Texture.h  TextureCache.h
game/src/helpers/: Registered.cpp  Registry.h
game/src/map/: Behavior.cpp  Behavior.h  Class.cpp  Class.h  Map.cpp  Map.h  Row.cpp  Row.h  Tile.cpp  Tile.h
game/src/util/: ChildList.h  QmlListAdapter.h  Registered.h  Registry.cpp  TiledRect.cpp  TiledRect.h  qmlengine.cpp  qmlengine.h
game/tiles/: concrete.qml
(+36 files in other folders)
